# leaseflow

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  migration-payload.json  migration-response.json  package-lock.json  skills-lock.json
backend/: .env.local.example  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260310_0001_initial_tables.py  20260407_0002_add_leases.py  20260407_0003_add_lease_due_day.py  20260407_0004_add_notifications.py  20260407_0005_add_notification_dedupe_constraint.py  20260409_0006_add_notification_read_at.py  20260430_0007_add_notification_contacts.py  20260504_0008_add_notification_email_deliveries.py  20260508_0009_add_notification_email_correlation.py  20260512_0010_add_notification_contact_suppressions.py  (+1 more)
backend/scripts/: __init__.py  invoke_local.py
backend/src/app/: __init__.py  (+8 more)
backend/tests/: test_audit_logs_rls_migration.py  test_auth.py  test_config.py  test_db_integration.py  test_db_migrations_route.py  test_db_tenant_context.py  test_email_delivery.py  test_handler.py  test_invoke_local.py  test_lease_reminders_route.py  test_leases_route.py  test_metrics.py  test_notification_contact_setup_route.py  test_notification_contact_suppression_data_access.py  test_notification_contacts_route.py  test_notification_email_delivery_route.py  test_notification_email_sender.py  test_notifications_route.py  test_properties_route.py  test_reminder_scans_route.py  test_ses_provider_feedback_route.py
(+217 files in other folders)
