[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaseflow-backend"
version = "0.1.0"
description = "LeaseFlow Lambda backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "boto3>=1.37.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<10.0.0",
  "ruff>=0.11.0,<0.16.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
